[gd_scene load_steps=3 format=3 uid="uid://cokhklsp0ttgb"]

[ext_resource type="Script" path="res://Scripts/UI/rune_selection_menu.gd" id="1_v7gkj"]
[ext_resource type="PackedScene" uid="uid://bytrp70ejdedq" path="res://Scenes/UI/rune_drop_off.tscn" id="2_goqgk"]

[node name="RuneSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v7gkj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectedRunes" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
alignment = 1

[node name="RuneDropOff" parent="SelectedRunes" instance=ExtResource("2_goqgk")]
layout_mode = 2
page = 1

[node name="RuneDropOff2" parent="SelectedRunes" instance=ExtResource("2_goqgk")]
layout_mode = 2
page = 2

[node name="RuneDropOff3" parent="SelectedRunes" instance=ExtResource("2_goqgk")]
layout_mode = 2
page = 3

[node name="RuneDropOff4" parent="SelectedRunes" instance=ExtResource("2_goqgk")]
layout_mode = 2
page = 4

[node name="RuneDropOff5" parent="SelectedRunes" instance=ExtResource("2_goqgk")]
layout_mode = 2
page = 5

[node name="RuneSelectors" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 6
